Memcached container fixes.
1) Size changed from 650Mb to 250Mb
2) Run from non root user
3) Del uneeded run script
4) Add tests

Change-Id: Ie9d608d4fc14a356e60bb70bbd0ce5eb9c0256eb
Depends-On: Ic8aa3085f7c2d567907e6c6370c8963a4629a89b

--- a/docker/memcached/Dockerfile.j2
+++ b/docker/memcached/Dockerfile.j2
@@ -1,18 +1,18 @@
-FROM {{ namespace }}/openstack-base:{{ tag }}
+FROM {{ namespace }}/base-tools:{{ tag }}
 MAINTAINER {{ maintainer }}
 
 ENV DEBIAN_FRONTEND "noninteractive"
 
 RUN apt-get update \
     && apt-get install -q -y -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" memcached \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
-#USER memcache
+RUN useradd --user-group memcached \
+    && usermod -a -G microservices memcached
 
-ADD run.sh /run.sh
-RUN chmod +x /run.sh
-
-ENTRYPOINT ["/run.sh"]
-CMD [""]
-
+USER memcached
 EXPOSE 11211
+
+# ChancheMe to template in future
+CMD ["memcached", "-v", "-u", "memcached",  "-l", "0.0.0.0", "-m", "256"]
